--- a/ePostcard/Base.lproj/Main.storyboard
+++ b/ePostcard/Base.lproj/Main.storyboard
@@ -1,24 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Kzq-QE-FKj">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="FeQ-qm-Xya">
+            <objects>
+                <navigationController id="Kzq-QE-FKj" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7Wq-UC-18B">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="73G-Vw-jjW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BFI-6H-zfw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-198" y="131"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ePostcard" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ec-Ek-0Vm">
+                                <rect key="frame" x="319" y="607" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="e6F-lW-648"/>
+                                    <constraint firstAttribute="height" constant="40" id="w3r-jf-AT7"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="Qdm-s6-t1u" kind="show" id="BVr-vP-4wB"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8Ec-Ek-0Vm" secondAttribute="trailing" constant="16" id="9Xc-ne-brk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8Ec-Ek-0Vm" secondAttribute="bottom" constant="20" id="CTE-H9-SUi"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="nGl-xE-bFH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="642" y="131"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="Nfw-0B-Skj">
+            <objects>
+                <viewController id="Qdm-s6-t1u" customClass="ViewControllerFront" customModule="ePostcard" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Af3-mD-aJb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VVQ-Mq-Pue">
+                                <rect key="frame" x="16" y="80" width="343" height="471"/>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bOA-kd-ffg">
+                                <rect key="frame" x="16" y="567" width="343" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="JHK-wT-J3V"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bOA-kd-ffg" firstAttribute="top" secondItem="VVQ-Mq-Pue" secondAttribute="bottom" constant="16" id="KoO-9V-LLS"/>
+                            <constraint firstItem="naM-c9-tQ5" firstAttribute="bottom" secondItem="bOA-kd-ffg" secondAttribute="bottom" constant="20" id="TPy-qv-qKI"/>
+                            <constraint firstItem="naM-c9-tQ5" firstAttribute="trailing" secondItem="bOA-kd-ffg" secondAttribute="trailing" constant="16" id="Tcg-jo-8Vp"/>
+                            <constraint firstItem="VVQ-Mq-Pue" firstAttribute="leading" secondItem="naM-c9-tQ5" secondAttribute="leading" constant="16" id="fQV-ft-B9p"/>
+                            <constraint firstItem="VVQ-Mq-Pue" firstAttribute="top" secondItem="naM-c9-tQ5" secondAttribute="top" constant="16" id="gW2-Fa-f2b"/>
+                            <constraint firstItem="naM-c9-tQ5" firstAttribute="trailing" secondItem="VVQ-Mq-Pue" secondAttribute="trailing" constant="16" id="ifX-dk-mzk"/>
+                            <constraint firstItem="bOA-kd-ffg" firstAttribute="leading" secondItem="naM-c9-tQ5" secondAttribute="leading" constant="16" id="oQ2-rN-edj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="naM-c9-tQ5"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="JvN-Vu-81G">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="FEb-2e-XdE">
+                            <connections>
+                                <action selector="loadImage:" destination="Qdm-s6-t1u" id="4pg-OE-KeH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="filtersScrollView" destination="bOA-kd-ffg" id="5PY-A7-F2h"/>
+                        <outlet property="imageView" destination="VVQ-Mq-Pue" id="aVp-4L-tJa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wyV-pz-d9x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1429.5999999999999" y="130.88455772113943"/>
         </scene>
     </scenes>
 </document>
