--- a/ePostcard/Base.lproj/LaunchScreen.storyboard
+++ b/ePostcard/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +17,48 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="postcards" translatesAutoresizingMaskIntoConstraints="NO" id="9bE-Bg-DpM">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ej0-vd-VGz">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ePostcards!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZz-E0-Rz9">
+                                        <rect key="frame" x="16" y="516" width="343" height="51"/>
+                                        <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="40"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.84992308937823835" green="0.62508191977349647" blue="0.57002368046528618" alpha="0.53521126760563376" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="CZz-E0-Rz9" secondAttribute="trailing" constant="16" id="Pnv-bG-mx8"/>
+                                    <constraint firstAttribute="bottom" secondItem="CZz-E0-Rz9" secondAttribute="bottom" constant="80" id="TCi-4c-GXg"/>
+                                    <constraint firstItem="CZz-E0-Rz9" firstAttribute="leading" secondItem="ej0-vd-VGz" secondAttribute="leading" constant="16" id="kU4-6A-kFN"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ej0-vd-VGz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5Cu-OW-WWz"/>
+                            <constraint firstItem="9bE-Bg-DpM" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="8UP-3h-R6Q"/>
+                            <constraint firstItem="9bE-Bg-DpM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="HKs-cy-aWK"/>
+                            <constraint firstItem="9bE-Bg-DpM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QD1-V4-rNh"/>
+                            <constraint firstItem="ej0-vd-VGz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cWi-Zh-GXk"/>
+                            <constraint firstItem="9bE-Bg-DpM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gcR-dw-zxU"/>
+                            <constraint firstItem="ej0-vd-VGz" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="hur-P6-BhO"/>
+                            <constraint firstItem="ej0-vd-VGz" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="n5Y-tI-cFy"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="postcards" width="600" height="637"/>
+    </resources>
 </document>
