--- a/ePostcard/Base.lproj/Main.storyboard
+++ b/ePostcard/Base.lproj/Main.storyboard
@@ -26,6 +26,43 @@
             </objects>
             <point key="canvasLocation" x="-198" y="131"/>
         </scene>
+        <!--View Controller View Post-->
+        <scene sceneID="5GK-iv-BFI">
+            <objects>
+                <viewController id="Eba-Vc-dGj" customClass="ViewControllerViewPost" customModule="ePostcard" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="p6w-in-7w7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="shz-ux-k34">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xqG-e8-h2L">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="shz-ux-k34" firstAttribute="leading" secondItem="e4o-dS-c8u" secondAttribute="leading" id="6Qt-Xv-VKJ"/>
+                            <constraint firstItem="xqG-e8-h2L" firstAttribute="leading" secondItem="e4o-dS-c8u" secondAttribute="leading" id="Jxe-w3-Xek"/>
+                            <constraint firstItem="xqG-e8-h2L" firstAttribute="trailing" secondItem="e4o-dS-c8u" secondAttribute="trailing" id="bjj-3d-Y56"/>
+                            <constraint firstItem="xqG-e8-h2L" firstAttribute="top" secondItem="e4o-dS-c8u" secondAttribute="top" id="e12-Vh-yp2"/>
+                            <constraint firstItem="shz-ux-k34" firstAttribute="trailing" secondItem="e4o-dS-c8u" secondAttribute="trailing" id="ePD-8a-LhE"/>
+                            <constraint firstItem="shz-ux-k34" firstAttribute="top" secondItem="e4o-dS-c8u" secondAttribute="top" id="jDa-k6-a0O"/>
+                            <constraint firstItem="xqG-e8-h2L" firstAttribute="bottom" secondItem="e4o-dS-c8u" secondAttribute="bottom" id="xIH-fr-PQr"/>
+                            <constraint firstItem="shz-ux-k34" firstAttribute="bottom" secondItem="e4o-dS-c8u" secondAttribute="bottom" id="zc3-3k-HGI"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="e4o-dS-c8u"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageBack" destination="shz-ux-k34" id="sua-bf-jq4"/>
+                        <outlet property="imageFront" destination="xqG-e8-h2L" id="InG-gY-3sY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J3e-kM-xIR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1429.5999999999999" y="-615.74212893553226"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -88,6 +125,7 @@
                                         <size key="customSize" width="280" height="280"/>
                                         <connections>
                                             <outlet property="postcardImage" destination="7Wf-3G-mpX" id="5pr-h8-DiL"/>
+                                            <segue destination="Eba-Vc-dGj" kind="show" identifier="viewPostcard" id="2Rm-S8-izD"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
